tests/ui/discord-frontend/entity_macro/expected_literal_2.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_2.rs:34:12
   |
LL |     from = core
   |            ^^^^

error: aborting due to 1 previous error

